# sack

./: .gitignore  .sack.swp  MANIFEST.in  README  README.md  T_gm.py  T_tm.py  anc_gm.py  ani_gm.py  cgpalg_dense_tm.py  cgpalg_tm.py  cgtest.py  cl2_gm.py  cl2_tm.py  cl2m_gm.py  cl2m_tm.py  dih_tm.py  dn_gm.py  f2poly_tm.py  f2polymod_tm.py  f2test  fact_m.py  genquat_tm.py  gint_tm.py  ispec_gm.py  ispec_tm.py  metacyc_gm.py  metacyc_tm.py  mktestskel  mod_tm.py  modadd_gm.py  modadd_tm.py  modmul_gm.py  modmul_tm.py  modtest.py  pauli_gm.py  pauli_tm.py  pmtc_tm.py  pmtc_tm.py.inherit  pmti_tm.py  (+22 more)
python-2/: T_gm.py  T_tm.py  anc_gm.py  ani_gm.py  cgpalg_dense_tm.py  cgpalg_tm.py  cgtest.py  cl2_tm.py  cl2m_gm.py  f2mtest  f2polymod_tm.py  fact_m.py  gint_tm.py  ispec_tbl.py  ispec_tm.py  metacyc_tm.py  mod_tm.py  modmul_gm.py  pauli_gm.py  pauli_tm.py  pmtc_tm.py  qn_gm.py  quatu_tm.py  sackall_m.py  sackint.py  sackset.py  spec_tables.py  test_rand_pmt.py
src/sack/: _version.py  pmti_tm.py  sackint.py  uniqc_m.py
tests/: test_sackint.py
